# MovieMaker

./: .gitignore  .gitleaks.toml  Makefile  README.md  Readme.md  action.py  activity.py  character.py  config.ini  config.yaml  config_reader.py  constants.py  exceptions.py  font.py  global_config.yaml  logging_config.py  pyproject.toml  requirements.txt  run.py  scenario.py  script.yaml  test.py  utils.py  validation.py  xunfei_tts.py  武松打虎.yaml
actions/: __init__.py  action.py  bgm.py  camera.py  disappear.py  display.py  fight.py  gif.py  stop.py  switch.py  talk.py  turn.py  update.py  walk.py
demo/: 001.yaml  002.yaml  003.yaml  水浒传.yaml
libs/: AudioHelper.py  ImageHelper.py  RenderHelper.py  SuCaiHelper.py  VideoHelper.py  xunfei_tts.py
libs/TTSEngine/: chat.py  ttspro.py  xunfei_tts.py
libs/TTSEngine/speaker/: 101.csv  102.csv  104.csv  105.csv  106.csv  107.csv  14.csv  16.csv  17.csv  19.csv  200.csv  27.csv  300.csv  400.csv  502.csv  503.csv  504.csv  505.csv  506.csv  507.csv  508.csv  800.csv
resources/JiChuSuCai/: (12.10)石头20版.ai  (12.6)古风类建筑二十版.ai  (12.6)首饰二十版.ai  __init__.py
resources/JiChuSuCai/BeiJing/: __init__.py
resources/JiChuSuCai/JueSeZuJian/: __init__.py
resources/JiChuSuCai/WuQi/: 沙雕动画素材网小小道具三.ai
resources/ShengYin/: 中村八大-笑点.m4a  小心入侵者.m4a  鞭炮齐名.m4a
resources/SuCai/: __init__.py
resources/SuCai/JueSe/: __init__.py
tests/: test_bgm.py  test_camera.py  test_disappear.py  test_display.py  test_fight.py  test_gif.py  test_stop.py  test_switch.py  test_talk.py  test_turn.py  test_update.py  test_walk.py
(+17 files in other folders)
