[project]
name = "moviemaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.8.30",
    "charset-normalizer==3.4.1",
    "chattts==0.2.4",
    "decorator==5.2.1",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "ipython>=9.5.0",
    "librosa==0.11.0",
    "moviepy==2.1.2",
    "numpy==2.2.6",
    "omegaconf>=2.3.0",
    "pillow==10.4.0",
    "proglog>=0.1.12",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "ruamel-yaml>=0.18.15",
    "soundfile>=0.13.1",
    "torchaudio==2.6.0",
    "tqdm>=4.67.1",
    "transformers==4.48.0",
    "urllib3>=2.5.0",
    "vector-quantize-pytorch==1.22.15",
    "vocos==0.1.0",
    "websocket-client>=1.8.0",
]
